# URC-2026

arm_ros2_ws/src/arm/: CMakeLists.txt  package.xml
arm_ros2_ws/src/arm/config/: joint_names_arm.yaml
arm_ros2_ws/src/arm/description/: arm.csv  arm.urdf
arm_ros2_ws/src/arm/meshes/: base_link.STL  elbow_Link.STL  shoulder_link.STL  wrist_pitch_link.STL  wrist_roll_link.STL
arm_ros2_ws/src/arm_gamepad_teleop/: CMakeLists.txt  package.xml
arm_ros2_ws/src/arm_gamepad_teleop/config/: xbox.yaml
arm_ros2_ws/src/arm_gamepad_teleop/src/: arm_teleop.cpp
arm_ros2_ws/src/arm_hardware_interface/: CMakeLists.txt  arm_hardware_interface.xml  package.xml
arm_ros2_ws/src/arm_hardware_interface/include/arm_hardware_interface/: arm_driver_node.hpp  arm_hardware_interface.hpp  shared_data.hpp
arm_ros2_ws/src/arm_hardware_interface/msg/: ArmTelemetry.msg
arm_ros2_ws/src/arm_hardware_interface/src/: arm_driver_node.cpp  arm_hardware_interface.cpp
arm_ros2_ws/src/arm_moveit_config/: .setup_assistant  package.xml
arm_ros2_ws/src/arm_moveit_config/config/: arm.ros2_control.xacro  arm.srdf  arm.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  servo_settings.yaml
arm_ros2_ws/src/arm_moveit_config/launch/: servo_demo.launch.py
drive_ros2_ws/src/drive/: CMakeLists.txt  package.xml  setup.py
drive_ros2_ws/src/drive/launch/: teleop_drive.launch.yaml  teleop_drive_launch.yaml
drive_ros2_ws/src/drive/src/: drive_manager_node.cpp  drive_manager_node.py
drive_ros2_ws/src/drive_teleop/: CMakeLists.txt  package.xml
drive_ros2_ws/src/drive_teleop/include/drive_teleop/: drive_teleop_node.hpp
drive_ros2_ws/src/drive_teleop/msg/: DriveControlMessage.msg
drive_ros2_ws/src/drive_teleop/src/: drive_teleop_node.cpp
drive_ros2_ws/src/teleop_drive/: CMakeLists.txt  package.xml
drive_ros2_ws/src/teleop_drive/src/: drive_teleop_node.cpp
embedded_ros2_ws/: .gitignore
embedded_ros2_ws/src/: npkrosnode.py  spectrophotometer_ros2_node.py
embedded_ros2_ws/src/blender_motor/: package.xml  setup.cfg  setup.py
embedded_ros2_ws/src/blender_motor/blender_motor/: blender_motor_node.py
embedded_ros2_ws/src/blender_motor/launch/: blender_motor.launch.py
embedded_ros2_ws/src/cubemars/: .gitignore
embedded_ros2_ws/src/cubemars/cubemars_node/: CMakeLists.txt  package.xml
embedded_ros2_ws/src/cubemars/cubemars_node/include/: cubemars_can_node.hpp
embedded_ros2_ws/src/cubemars/cubemars_node/launch/: example_launch.yaml
embedded_ros2_ws/src/cubemars/cubemars_node/msg/: ControlMessage.msg  ControllerStatus.msg
embedded_ros2_ws/src/cubemars/cubemars_node/src/: cubemars_can_node.cpp  main.cpp
embedded_ros2_ws/src/drive/: package.xml  setup.py
embedded_ros2_ws/src/drive/drive/: drive_node.py
embedded_ros2_ws/src/mock_gps/: CMakeLists.txt  package.xml
embedded_ros2_ws/src/mock_gps/launch/: gnss.launch.py
embedded_ros2_ws/src/mock_gps/src/: mock_gps_node.cpp
embedded_ros2_ws/src/npk_sensor/: CMakeLists.txt  package.xml
embedded_ros2_ws/src/npk_sensor/launch/: example_launch.yaml
embedded_ros2_ws/src/npk_sensor/src/: npk_sensor_node.py
embedded_ros2_ws/src/npk_sensor/srv/: GetSoilData.srv
embedded_ros2_ws/src/ros_odrive/odrive_node/: CMakeLists.txt
embedded_ros2_ws/src/ros_odrive/odrive_node/include/: odrive_can_node.hpp
embedded_ros2_ws/src/ros_odrive/odrive_node/launch/: example_launch.yaml
embedded_ros2_ws/src/ros_odrive/odrive_node/msg/: ControlMessage.msg  ControllerStatus.msg
embedded_ros2_ws/src/ros_odrive/odrive_node/src/: odrive_can_node.cpp
embedded_ros2_ws/src/serializer_nodes/: listener_node_rover.py
embedded_ros2_ws/src/serializer_nodes_demo/: package.xml  setup.cfg  setup.py
embedded_ros2_ws/src/serializer_nodes_demo/launch/: telemetry_launch.yaml
embedded_ros2_ws/src/serializer_nodes_demo/serializer_nodes_demo/: listener_node_rover.py  serial_demo_node_basestation.py  serial_demo_node_publisher.py  serial_demo_node_subscriber.py
embedded_ros2_ws/src/serializer_nodes_demo/serializer_nodes_demo/install/: local_setup.sh  setup.ps1  setup.sh
embedded_ros2_ws/src/serializer_nodes_demo/serializer_nodes_demo/log/: latest_build
embedded_ros2_ws/src/servo/servo_node/: .gitignore  CMakeLists.txt  package.xml
embedded_ros2_ws/src/servo/servo_node/include/servo_node/: servo_node.hpp
embedded_ros2_ws/src/servo/servo_node/launch/: example_launch.yaml  example_launch2.yaml
embedded_ros2_ws/src/servo/servo_node/msg/: ControlMessage.msg
embedded_ros2_ws/src/servo/servo_node/src/: main.cpp  servo_node.cpp
embedded_ros2_ws/src/spectro_sensor/: spectro_node.py
embedded_ros2_ws/src/spectro_sensor/srv/: GetSpectroData.srv
embedded_ros2_ws/src/stepper/stepper_node/: CMakeLists.txt  package.xml
embedded_ros2_ws/src/stepper/stepper_node/include/: stepper_can_node.hpp
embedded_ros2_ws/src/stepper/stepper_node/launch/: example_launch.yaml
embedded_ros2_ws/src/stepper/stepper_node/src/: main.cpp  stepper_can_node.cpp
embedded_ros2_ws/src/yellowjacket/: .gitignore
embedded_ros2_ws/src/yellowjacket/yellowjacket_node/: CMakeLists.txt  package.xml
rover-base-station/: desktop.ini  index.html  package-lock.json  package.json
rover-base-station/src/: Autonomous.jsx  BaseStation.css  BaseStation.jsx  Delivery.jsx  Equipment.jsx  Science.jsx  home.jsx  main.jsx
rover_teleop_ws/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
rover_teleop_ws/log/: latest_build
rover_teleop_ws/src/rover_teleop/: setup.py
software/arm_ros2_ws/: frames_2026-01-25_14.17.13.gv
software/arm_ros2_ws/src/arm_hardware_interface/: CMakeLists.txt  package.xml
software/arm_ros2_ws/src/arm_hardware_interface/include/arm_hardware_interface/: arm_hardware_interface.hpp
software/arm_ros2_ws/src/arm_hardware_interface/src/: arm_hardware_interface.cpp
software/arm_ros2_ws/src/arm_moveit_config/: CMakeLists.txt  package.xml
website/base-station-website/: package.json  pnpm-lock.yaml
website/base-station-website/src/app/: page.js  page.module.css
(+46 files in other folders)
