<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>servo</name>
  <version>0.0.0</version>
  <description>ROS implementation for generic servo control</description>
  <maintainer email="ethansaddy@gmail.com">ethan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <rosidl_package_name>${PROJECT_NAME}</rosidl_package_name>
    <rosidl_target_interfaces>msg/${PROJECT_NAME}.msg</rosidl_target_interfaces>
    <build_type>ament_cmake</build_type>
  </export>
</package>
